# website-utils

./: README.md  README.zh-cn.md
.github/workflows/: paste-server-rs.yml
make-news-index/: main.go
paste-server/: .gitignore  main.go  test.http
paste-server-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  production.compose.yml
paste-server-rs/.sqlx/: query-1bded4c6bd94d915b050ae1a3cf143c735bfd1ad8b0e7dfde7b3e81f55ae03ca.json  query-2d611343d621d48b9bb3493f31ef57e524cf9e87ff76f60ac985caf93ea87e68.json  query-58c98e5dc5e68c853c9091140e34e21ba9fe49225e50346de9c7be152162dca2.json  query-8f568c34f779acebeb3ddec7193812043f01e718143e028058614bfc1c9265c9.json  query-a45d475ed70281c0bf7c3f46db0c138596bb1a911ed378131710c1c22639952d.json  query-b071d3498738a733d496d9e8216a26862350271176bdb53e33905e0caa915ea4.json  query-f43570249929a317b1ab8f22230adab90cc4c63830dc3984842d3a7a96765f94.json
paste-server-rs/migrations/: 20250815053637_create-table.sql  20250817165051_create-table.sql
paste-server-rs/src/: main.rs
paste-server/api/paste/v1/: paste.go
paste-server/hack/: config.yaml
paste-server/internal/controller/paste/: paste_v1_new_paste.go
scripts/: convert-wiki-md.py
