[package]
name = "paste-server-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "fs"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
dotenvy = "0.15.7"
axum = { version = "0.8", features = ["multipart"] }
sqlx = { version = "0.8", features = [
    "runtime-tokio-native-tls",
    "macros",
    "postgres",
    "migrate",
    "uuid",
    "chrono",
] }
uuid = { version = "1", features = ["v4"] }
chrono = "0.4.41"
tower-http = { version = "0.6.1", features = ["fs"] }
url = "2.5"
serde_json = "1"
thiserror = "2"
